# ecommerce-rust

./: Cargo.toml  README.md
src/: error.rs  log.rs  main.rs
src/api/: health_check.rs  mod.rs
src/api/customer/: controller.rs  db.rs  mod.rs  route.rs
src/api/user/: controller.rs  db.rs  route.rs
src/lib/: dynamodb.rs
src/routes/: customer.rs  health_check.rs  mod.rs
