[package]
name = "ecommerce-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
bcrypt = "0.13"
boringauth = "0.9.0"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.1"
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.2.0"
slog-term = "2.9.0"
uuid = { version = "1.2.2", features = ["v4", "serde", "fast-rng","macro-diagnostics"]}

